fixes #1, align buttons, made next button primary and other buttons secondary

--- a/nyc/test/self.css
+++ b/nyc/test/self.css
@@ -10,3 +10,36 @@
     display: none;
     visibility: hidden;
 }
+button.btn.btn-af.cancelbutton {
+    visibility: hidden;
+    display: none;
+}
+
+.nextbutton {
+    background-color: #00692f;
+}
+.previousbutton {
+    margin-top: -14px !important;
+}
+
+.btn-secondary {
+    background-color: #12457a;
+    color: #fff;
+}
+
+
+._AF .btn.btn-default, .achieveforms-container .btn.btn-default{
+	    
+    min-width: auto;
+	border-radius: 0;
+box-shadow: none;
+text-shadow: none;
+border: 0;
+background-color: #12457a !important;
+box-shadow: 0 2px 0 #003518;
+	color:#fff;
+}
+
+._AF .btn.btn-default:hover, .achieveforms-container .btn.btn-default:hover{
+	background-color: #12457a !important;
+}
